--- a/main.html
+++ b/main.html
@@ -1,4 +1,18 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sample HTML Page</title>
+</head>
+<body>
+    <h1>Hello, Cloudflare Pages!</h1>
+    <p>This is a simple sample HTML page deployed using Cloudflare Pages.</p>
+</body>
+</html>
+
+
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <title>Payment Success</title>
@@ -39,5 +53,5 @@
     <p>Your payment has been processed successfully.</p>
   </div>
 </body>
-</html>
+</html> -->
 
